avance version grafica en clase

--- a/penjat.html
+++ b/penjat.html
@@ -15,8 +15,14 @@
         <button class="btnInformes" onclick="informe()"> Informes </button>
         
     </div>
+    <div class="containerImg">
+        <img id="imgPenjat">
+    </div>
     <div class="containerPalabras">
         <p id="jocPenjat"></p>
+    </div>
+    <div class="containerTxt">
+        <p id="text"></p>
     </div>
     <div class="containerBtns">
         <div id="abecedario"></div>
