--- a/penjat.html
+++ b/penjat.html
@@ -8,12 +8,11 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>El penjat</h1>
+    <h1 >El ahorcado</h1>
     <img src="" alt="">
     <div class="container">
         <button class="btnPartida" onclick="iniciarPartida()"> Iniciar partida </button>
         <button class="btnInformes" onclick="informe()"> Informes </button>
-        
     </div>
     <div class="containerImg">
         <img id="imgPenjat">
@@ -27,5 +26,6 @@
     <div class="containerBtns">
         <div id="abecedario"></div>
     </div>
+
 </body>
 </html>
